--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,19 @@
     <!-- Include Navbar -->
     <%- include('partials/navbar') %>
 
+    <div id="popup" class="popup" style="display: none">
+      <h2>Welcome to Phoning!</h2>
+      <p>
+        This website is the result of the Final Semester Examination Project of
+        the Web Programming course. All actions on this website are only
+        simulations, and cannot be used for real purposes. <br /><br />
+        Website ini adalah website hasil Tugas Ujian Akhir Semester matakuliah
+        Pemrograman Web. Segala aksi dalam website ini hanyalah simulasi, dan
+        tidak dapat digunakan untuk keperluan nyata.<br />
+      </p>
+      <button id="close-popup">Tutup</button>
+    </div>
+
     <!-- Poster content -->
     <div class="poster">
       <div>
