--- a/views/payment-error.ejs
+++ b/views/payment-error.ejs
@@ -16,7 +16,7 @@
     <%- include('partials/navbar') %>
 
     <div class="payment-container">
-      <div class="popup" id="popup">
+      <div class="popup-trans" id="popup">
         <img src="<%= '/'+userData.img || '/img/boci.png' %>" alt="berhasil!" />
         <h2>Yahhh...</h2>
         <p>Pesananmu gagal dibuat, harap coba lagi ya.</p>
