--- a/views/payment-pending.ejs
+++ b/views/payment-pending.ejs
@@ -16,7 +16,7 @@
     <%- include('partials/navbar') %>
 
     <div class="payment-container">
-      <div class="popup" id="popup">
+      <div class="popup-trans" id="popup">
         <img src="<%= '/'+userData.img || '/img/boci.png' %>" alt="berhasil!" />
         <h2>Hmm?</h2>
         <p>Masih menunggu pembayaranmu, harap ditunggu ya.</p>
