--- a/views/payment-success.ejs
+++ b/views/payment-success.ejs
@@ -16,7 +16,7 @@
     <%- include('partials/navbar') %>
 
     <div class="payment-container">
-      <div class="popup" id="popup">
+      <div class="popup-trans" id="popup">
         <img src="<%= '/'+userData.img || '/img/boci.png' %>" alt="berhasil!" />
         <h2>Yeay!</h2>
         <p>Pesananmu berhasil dibuat, harap ditunggu ya.</p>
