--- a/views/phone.ejs
+++ b/views/phone.ejs
@@ -249,6 +249,7 @@
             />
             <input type="hidden" name="phoneId" value="<%= phone.id_phone%>" />
             <input type="hidden" name="harga" value="<%= phone.harga %>" />
+            <input type="hidden" name="desc" value="<%= phone.description %>" />
             <button type="submit" id="checkout-quantity" class="buy-now">
               Beli Sekarang
             </button>
