--- a/public/css/co.css
+++ b/public/css/co.css
@@ -472,10 +472,14 @@ h3 {
 }
 
 .popup {
+  position: fixed;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
   width: 400px;
   background: #fff;
   border-radius: 6px;
-  top: 0;
   left: 50%;
   text-align: center;
   padding: 0 30px 30px;
@@ -483,7 +487,35 @@ h3 {
   border: 1px solid #ccc;
 }
 
-.popup img {
+.popup-trans {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  width: 400px;
+  background: #fff;
+  border-radius: 6px;
+  text-align: center;
+  padding: 0 30px 30px;
+  color: #333;
+  border: 1px solid #ccc;
+}
+
+#popup::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+#popup button {
+  background-color: #1f2d51;
+  color: #ffffff;
+  padding: 5px 20px;
+}
+
+.popup-trans img {
   width: 100px;
   height: 100px;
   margin-top: -50px;
