--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,34 @@
   font-weight: bold;
 }
 
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ffffff;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+}
+
+#popup::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+#popup button {
+  background-color: #1f2d51;
+  color: #ffffff;
+  padding: 5px 20px;
+}
+
 .user-dropdown {
   position: relative;
   display: inline-block;
