--- a/views/cart-added.ejs
+++ b/views/cart-added.ejs
@@ -16,7 +16,7 @@
     <%- include('partials/navbar') %>
 
     <div class="payment-container">
-      <div class="popup" id="popup">
+      <div class="popup-trans" id="popup">
         <img
           src="<%= userData.img ? '/' + userData.img : '/img/boci.png' %>"
           alt="Profile Image"
@@ -32,6 +32,5 @@
 
     <!-- Include Bootstrap JS dan script lainnya -->
     <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/script.js"></script>
   </body>
 </html>
