--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,11 @@
         simulations, and cannot be used for real purposes. <br /><br />
         Website ini adalah website hasil Tugas Ujian Akhir Semester matakuliah
         Pemrograman Web. Segala aksi dalam website ini hanyalah simulasi, dan
-        tidak dapat digunakan untuk keperluan nyata.<br />
+        tidak dapat digunakan untuk keperluan nyata.<br /><br />
+        This website created by: <br />
+        Andreas Calvin <br />
+        Thalia Dyah Zaneta <br />
+        Zsa Zsa Aulia Az Zahrah <br />
       </p>
       <button id="close-popup">Tutup</button>
     </div>
