fix pop up no email not show

--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -233,7 +233,7 @@
         >
       </div>
 
-      <div id="popup" class="popup" style="display: none">
+      <div id="popup-email" class="popup" style="display: none">
         <h2>Peringatan</h2>
         <p id="popup-message"></p>
         <a href="/profile"><button id="close-popup">Ke Profile</button></a>
